$Id: History,v 1.9 1999-04-15 15:29:33 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

vis-01-00-07  15th April 1999  John Allison
- Replaced visualization/test/GNUmakefile by a simple one using binmake.gmk.
- Added CPPFLAGS += -I$(G4BASE)/intercoms/include to some GNUmakefiles ready
    for the move of G4VGraphicsScene to intercoms.

vis-01-00-06  29th March 1999  John Allison
- Platform dependency fix in G4VisCommandsScene.cc.

vis-01-00-05  7th February 1999  John Allison
- management: - Added /vis/scene/notifyHandlers.
              - Added virtual functions AddThis (const G4Polycone and
                G4Polyhedra to G4VSceneHandler
              - Moved some code from G4VisManager to G4Scene::AddWorldIfEmpty.
              - Various refinements and bug fixes.
- modeling: Augmented G4PhysicalVolumeSearchScene and G4BoundingSphereScene
            See modeling/History.