@@ -5,13 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VRML1.hh,v 1.3 1999-01-11 00:47:57 allison Exp $
+// $Id: G4VRML1.hh,v 1.4 1999-04-19 01:18:33 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // G4VRML1.hh
 // Yasuhide Sawada and Satoshi Tanaka
 
-#if defined (G4VIS_BUILD_VRML_DRIVER) || (G4VIS_USE_VRML)
+#if defined (G4VIS_BUILD_VRML_DRIVER) || defined (G4VIS_USE_VRML)
 
 #ifndef G4VRML1_HH
 #define G4VRML1_HH
