@@ -1,4 +1,4 @@
-$Id: History,v 1.9 1999-04-15 15:29:33 johna Exp $
+$Id: History,v 1.10 1999-04-19 01:18:25 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,10 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+18th April 1999  John Allison
+- Added "defined" after || in VRML1(1)(File).hh.  (Some preprocessors
+  give an error without it.)
 
 vis-01-00-07  15th April 1999  John Allison
 - Replaced visualization/test/GNUmakefile by a simple one using binmake.gmk.
